03/01/21
        v2.3.2  - Drop GTK+ 1 support, migrate all widgets to their GTK+ 2
                  versions, drop GTK+ 2 deprecated APIs, use GTK+ 2 accessors
                  instead of direct structure access, and add support for
                  GTK+ 3 compilation (jamesbond3142).
                - Before this, there are many patches/features added back to
                  GTK+ 2 version to make it comparable in features to GTK+ 1
                  version (e.g. --fixed-font, etc) by various people
                  (amigo, 01micko, etc).
18/08/06
        v2.3.1  - Fixed the bug, introduced in v2.3.0, where the "Hide typing"
                  check button always appeared in the input boxes, regardless
                  of the existence of a password field.

13/08/06
        v2.3.0  - Added a new --password=1|2 syntax to allow a password field
                  in one of the first fields of --2inputsbox and --3inputsbox.
                - Added optional <red> <green> <blue> parameters for the
                  --colorsel widget.
                - Corrected a bug in the --treeview widget which was failing to
                  properly build a tree when decreasing the level of an item by
                  more than 1, compared to the level of the previous item.
                - Corrected a bug in the --colorsel widget which triggered a
                  GTK warning when the --icon option was used.
                - Adapted a patch from Jean-Philippe Guillemin for the GTK2
                  version of Xdialog (this version is still seriously broken:
                  DO NOT use it in production projects), implementing the use
                  of the GTK2 stock icons for the Xdialog buttons.

06/05/06
        v2.2.1  - Corrected the bug in the --dselect widget which was
                  returning a filename by default, instead of the directory
                  name. Also removed the file specific fields and buttons from